media-tools/notifiarr/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notifiarr
  namespace: media-tools
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  serviceName: notifiarr
  replicas: 1
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: notifiarr
  template:
    metadata:
      labels:
        app: notifiarr
        name: notifiarr
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: medium-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - 'amd64'
      containers:
      - name: notifiarr
        image: golift/notifiarr:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 100
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
          limits:
            cpu: 80m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /
            port: 5454
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        volumeMounts:
        - name: notifiarr-config
          mountPath: /config
        - name: media
          mountPath: /media
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: notifiarr-config
          persistentVolumeClaim:
            claimName: nfs-notifiarr
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
